--- a/credits.html
+++ b/credits.html
@@ -111,6 +111,6 @@
       </p>
       <hr />
     </center>
-    <p><a href="/index.html">Return to the Home Page</a></p>
+    <p><a href="index.html">Return to the Home Page</a></p>
   </body>
 </html>
