--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="icon.png" />
     <title>U.S. Department of Trans-Universal and Temporal Communiation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,37 +17,37 @@
     <h2>General Information</h2>
     <ul>
       <li>
-        <a class="valid" href="/Sub-pages/GeneralInfo/about.html"
+        <a class="valid" href="Sub-pages/GeneralInfo/about.html"
           >About the Department</a
         >
         - Refresh your memory about the branch of government you are working
         for!
       </li>
       <li>
-        <a class="valid" href="/Sub-pages/GeneralInfo/factsheet.html"
+        <a class="valid" href="Sub-pages/GeneralInfo/factsheet.html"
           >Fact Sheet</a
         >
         - Quick facts about the DTUTC!
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Employee Information</a>
+        <a href="Sub-pages/error.html">Employee Information</a>
         - Comprehensive list of all the hard-working employees at the DTUTC.
       </li>
       <li>
-        <a class="valid" href="/Sub-pages/GeneralInfo/oath.html">The Oath</a> -
+        <a class="valid" href="Sub-pages/GeneralInfo/oath.html">The Oath</a> -
         Always remember the oath you've taken while working! Or else.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">News and Announcements</a>
+        <a href="Sub-pages/error.html">News and Announcements</a>
         - Up-to-date news about the Department, projects and experiments.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">The Fundementals</a>
+        <a href="Sub-pages/error.html">The Fundementals</a>
         - Comprehensive information about the fundementals of Thompson's
         Equation and the Bonnet Tunnel.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">"Keep It Down"</a>
+        <a href="Sub-pages/error.html">"Keep It Down"</a>
         - The Department's official guidelines in case you are questioned about
         the existence of the DTUTC and your involvement.
       </li>
@@ -56,41 +56,41 @@
     <h2>Project Index (A-Z)</h2>
     <ul>
       <li>
-        <a href="/Sub-pages/error.html">Project Amber</a> (1956-1959)
+        <a href="Sub-pages/error.html">Project Amber</a> (1956-1959)
         <b>[U]</b> - Sub-atomic interactions - Universe 001
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Citadel</a> (1959-1962)
+        <a href="Sub-pages/error.html">Project Citadel</a> (1959-1962)
         <b>[U]</b> - Atomic interactions - Universe 001
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Dust</a> (1963-1971)
+        <a href="Sub-pages/error.html">Project Dust</a> (1963-1971)
         <b>[U]</b> Macro interactions - Universe 001-009
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Fracture</a> (1972-)
+        <a href="Sub-pages/error.html">Project Fracture</a> (1972-)
         <b>[U, T]</b> - In cooperation with the Department of Defense. Access
         requires log-in.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Indigo</a>
+        <a href="Sub-pages/error.html">Project Indigo</a>
         (1977-) <b>[U, T]</b> - Large-scale connection and information
         collection.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Neo</a> (1962-1971) <b>[T]</b> -
+        <a href="Sub-pages/error.html">Project Neo</a> (1962-1971) <b>[T]</b> -
         Sub-atomic, atomic and macro interactions - Universe 001
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Truth</a> (1980-) <b>[U]</b> -
+        <a href="Sub-pages/error.html">Project Truth</a> (1980-) <b>[U]</b> -
         Two-way communication on each Universe's InterNet message boards.
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Undermine</a> (1984-)
+        <a href="Sub-pages/error.html">Project Undermine</a> (1984-)
         <b>[U, T]</b> - Physical transportation. Planned - Universe 001
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Project Zero</a> (1954-1956)
+        <a href="Sub-pages/error.html">Project Zero</a> (1954-1956)
         <b>[U]</b> - Connection attempts
       </li>
     </ul>
@@ -102,27 +102,27 @@
     <h2>Universe Index</h2>
     <ul>
       <li>
-        <a href="/Sub-pages/error.html">Universe 001-025</a>
+        <a href="Sub-pages/error.html">Universe 001-025</a>
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Universe 026-050</a>
+        <a href="Sub-pages/error.html">Universe 026-050</a>
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Universe 051-075</a>
+        <a href="Sub-pages/error.html">Universe 051-075</a>
       </li>
       <li>
-        <a class="valid" href="/Sub-pages/UniverseIndex/uniidx_4.html"
+        <a class="valid" href="Sub-pages/UniverseIndex/uniidx_4.html"
           >Universe 076-100</a
         >
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Universe 101-125</a>
+        <a href="Sub-pages/error.html">Universe 101-125</a>
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Universe 126-150</a>
+        <a href="Sub-pages/error.html">Universe 126-150</a>
       </li>
       <li>
-        <a href="/Sub-pages/error.html">Universe 151-157</a>
+        <a href="Sub-pages/error.html">Universe 151-157</a>
       </li>
     </ul>
     <center>
@@ -147,7 +147,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="credits.html">Credits</a>
       </p>
     </center>
   </body>
