--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>U.S. Department of Trans-Universal and Temporal Communiation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="Images/iconslanted.png">
     <center>
       <img class="logo" src="icon.png" alt="U.S. DTUTC Logo" />
       <p class="boldxlarge">Welcome to the official web-site of</p>
