--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="icon.png" />
     <title>Credits and about me</title>
     <style>
       p {
@@ -28,7 +28,7 @@
       }
     </style>
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="Images/iconslanted.png">
     <center>
       <h1>Credits and about me</h1>
       <hr width="20%" />
