--- a/Sub-pages/error.html
+++ b/Sub-pages/error.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../icon.png" />
     <title>ERROR!</title>
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="../Images/iconslanted.png">
     <h1>Error: Page not found!</h1>
     <p>
       The page you are looking for is probably deleted or moved to another
@@ -14,7 +14,7 @@
       web-page supervisor.
     </p>
     <hr />
-    <a style="color: rgb(0, 129, 250)" href="/index.html"
+    <a style="color: rgb(0, 129, 250)" href="../index.html"
       >Return to the Home Page</a
     >
     <center>
@@ -27,7 +27,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../credits.html">Credits</a>
       </p>
     </center>
   </body>
