--- a/Sub-pages/GeneralInfo/about.html
+++ b/Sub-pages/GeneralInfo/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../../icon.png" />
     <title>About the DTUTC</title>
     <style>
       h1 {
@@ -23,7 +23,7 @@
       }
     </style>
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="../../Images/iconslanted.png">
     <center>
       <h1>A Brief History of the DTUTC</h1>
     </center>
@@ -155,7 +155,7 @@
       </table>
       <br />
     </center>
-    <a style="color: rgb(0, 129, 250)" href="/index.html"
+    <a style="color: rgb(0, 129, 250)" href="../../index.html"
       >Return to the Home Page</a
     >
     <hr />
@@ -180,7 +180,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../../credits.html">Credits</a>
       </p>
     </center>
   </body>
