--- a/Sub-pages/GeneralInfo/factsheet.html
+++ b/Sub-pages/GeneralInfo/factsheet.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../../icon.png" />
     <title>Fact Sheet</title>
     <style>
       p {
@@ -17,11 +17,11 @@
       }
     </style>
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="../../Images/iconslanted.png">
     <center>
-      <img src="/Images/swoosh.png" alt="woosh!" />
+      <img src="../../Images/swoosh.png" alt="woosh!" />
       <h1>The DTUTC Fact Sheet</h1>
-      <img src="/Images/swoosh.png" alt="woosh!" />
+      <img src="../../Images/swoosh.png" alt="woosh!" />
     </center>
     <p><b>Secretary:</b><br />Durward R. Randall</p>
     <p>
@@ -73,13 +73,13 @@
     <p>
       <b>Official song:</b><br />Thomas Jefferson March (<a
         style="color: rgb(0, 129, 250)"
-        href="/Audio/tjmarch.mp3"
+        href="../../Audio/tjmarch.mp3"
         >Download 3.37MB</a
       >)
     </p>
-    <center><img src="/Images/swoosh.png" alt="woosh!" /></center>
+    <center><img src="../../Images/swoosh.png" alt="woosh!" /></center>
     <br />
-    <a style="color: rgb(0, 129, 250)" href="/index.html"
+    <a style="color: rgb(0, 129, 250)" href="../../index.html"
       >Return to the Home Page</a
     >
     <hr />
@@ -104,7 +104,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../../credits.html">Credits</a>
       </p>
     </center>
   </body>
