--- a/Sub-pages/GeneralInfo/oath.html
+++ b/Sub-pages/GeneralInfo/oath.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../../icon.png" />
     <title>The Oath</title>
     <style>
       p.oath {
@@ -19,7 +19,7 @@
       }
     </style>
   </head>
-  <body background="/Images/iconslanted.png">
+  <body background="../../Images/iconslanted.png">
     <center>
       <h1>
         The Department of Trans-Universal and Temporal Communication Oath of
@@ -36,7 +36,7 @@
       </p>
       <hr style="border-color: rgb(0, 128, 49)" width="25%" />
     </center>
-    <a style="color: rgb(0, 129, 250)" href="/index.html"
+    <a style="color: rgb(0, 129, 250)" href="../../index.html"
       >Return to the Home Page</a
     >
     <hr />
@@ -61,7 +61,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../../credits.html">Credits</a>
       </p>
     </center>
   </body>
