--- a/Sub-pages/UniverseIndex/uniidx_4.html
+++ b/Sub-pages/UniverseIndex/uniidx_4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../../icon.png" />
     <title>Universe 076-100</title>
     <style>
       a.valid {
@@ -17,7 +17,7 @@
   </head>
   <body
     style="background-color: rgb(0, 15, 155)"
-    background="/Images/stripes.png"
+    background="../../Images/stripes.png"
   >
     <h1 style="color: white">Universe Index: 076 - 100</h1>
     <hr />
@@ -70,7 +70,7 @@
         <a
           class="valid"
           style="font-size: 20px"
-          href="/Sub-pages/UniverseIndex/Uni87/uni87.html"
+          href="../../Sub-pages/UniverseIndex/Uni87/uni87.html"
           >Universe 087</a
         >
       </li>
@@ -128,7 +128,7 @@
       </li>
       <br />
     </ul>
-    <a style="font-size: 20px" class="valid" href="/index.html"
+    <a style="font-size: 20px" class="valid" href="../../index.html"
       >Return to the Home Page</a
     >
     <hr />
@@ -153,7 +153,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../../credits.html">Credits</a>
       </p>
     </center>
   </body>
