--- a/Sub-pages/UniverseIndex/erroruni.html
+++ b/Sub-pages/UniverseIndex/erroruni.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/icon.png" />
+    <link rel="icon" href="../../icon.png" />
     <title>ERROR!</title>
   </head>
   <body
     style="background-color: rgb(0, 15, 155)"
-    background="/Images/stripes.png"
+    background="../../Images/stripes.png"
   >
     <h1 style="color: white">Error: Page not found!</h1>
     <p style="color: white">
@@ -21,7 +21,7 @@
       >Return to the previous page</a
     >
     <span style="color: white">|</span>
-    <a style="color: rgb(158, 255, 255)" href="/index.html"
+    <a style="color: rgb(158, 255, 255)" href="../../index.html"
       >Return to the Home Page</a
     >
     <center>
@@ -34,7 +34,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a style="color: rgb(158, 255, 255)" class="valid" href="/credits.html"
+        <a style="color: rgb(158, 255, 255)" class="valid" href="../../credits.html"
           >Credits</a
         >
       </p>
