--- a/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
@@ -9,7 +9,7 @@
   </head>
   <body
     style="background-color: rgb(0, 15, 155)"
-    background="/Images/stripes.png"
+    background="../../../../../Images/stripes.png"
   >
     <center>
       <h1>Experiment NET-87: Documentation</h1>
@@ -43,7 +43,7 @@
     <span style="color: white">|</span>
     <a class="valid" href="../../../uniidx_4.html">Return to Universe Index</a>
     <span style="color: white">|</span>
-    <a class="valid" href="/index.html">Return to the Home Page</a>
+    <a class="valid" href="../../../../../index.html">Return to the Home Page</a>
     <hr />
     <center>
       <p>
@@ -66,7 +66,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="/credits.html">Credits</a>
+        <a class="valid" href="../../../../../credits.html">Credits</a>
       </p>
     </center>
   </body>
