--- a/Sub-pages/UniverseIndex/uniidx_4.html
+++ b/Sub-pages/UniverseIndex/uniidx_4.html
@@ -21,7 +21,7 @@
   >
     <h1 style="color: white">Universe Index: 076 - 100</h1>
     <hr />
-    <ul>
+    <ul style="color: white">
       <li>
         <a style="font-size: 20px" href="erroruni.html">Universe 076</a>
       </li>
