--- a/credits.html
+++ b/credits.html
@@ -68,6 +68,8 @@
           target="_blank"
           href="https://www.youtube.com/watch?v=iOztnsBPrAA"
           >https://www.youtube.com/watch?v=iOztnsBPrAA</a
+        ><br /><a target="_blank" href="https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ"
+          >https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ</a
         >
       </p>
       <br />
@@ -77,6 +79,8 @@
           target="_blank"
           href="https://www.youtube.com/watch?v=th_LYe97ZVc"
           >https://www.youtube.com/watch?v=th_LYe97ZVc</a
+        ><br /><a target="_blank" href="https://www.youtube.com/c/GameTheorists"
+          >https://www.youtube.com/c/GameTheorists</a
         >
       </p>
       <br />
