--- a/Sub-pages/error.html
+++ b/Sub-pages/error.html
@@ -27,7 +27,7 @@
         parody website that is part of a series which dives into the question:
         "What if Five Nights at Freddy's was real?". Based on the design of old
         U.S. government websites from the 90s.
-        <a class="valid" href="../credits.html">Credits</a>
+        <a style="color: rgb(0, 129, 250)" href="../credits.html">Credits</a>
       </p>
     </center>
   </body>
