--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The official web-site of the Department of Trans-Universal and Temporal Communication"/>
     <meta name="og:title" content="U.S. Department of Trans-Universal and Temporal Communiation"/>
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="Images/preview.png" />
-    <meta property="og:url" content="https://www.jlorgearchives.xyz" />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="Images/preview.png" />
+    <meta name="og:url" content="https://www.jlorgearchives.xyz" />
     <link rel="icon" href="icon.png" />
     <title>U.S. Department of Trans-Universal and Temporal Communiation</title>
     <link rel="stylesheet" href="style.css" />
