--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The official web-site of the Department of Trans-Universal and Temporal Communication"/>
-    <meta property="og:title" content="U.S. Department of Trans-Universal and Temporal Communiation"/>
+    <meta property="og:title" content="U.S. Department of Trans-Universal and Temporal Communication"/>
     <meta property="og:type" content="website" />
     <meta property="og:image:secure_url" content="Images/preview.png" />
     <meta property="og:url" content="https://www.jlorgearchives.xyz" />
