--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The official web-site of the Department of Trans-Universal and Temporal Communication"/>
     <meta property="og:title" content="U.S. Department of Trans-Universal and Temporal Communication"/>
     <meta property="og:type" content="website" />
-    <meta property="og:image:secure_url" content="Images/preview.png" />
+    <meta property="og:image:secure_url" content="https://jlorgearchives.xyz/Images/preview.png" />
     <meta property="og:url" content="https://www.jlorgearchives.xyz" />
     <meta property="og:description" content="The official web-site of the Department of Trans-Universal and Temporal Communication" />
     <link rel="icon" href="icon.png" />
