--- a/Sub-pages/GeneralInfo/factsheet.html
+++ b/Sub-pages/GeneralInfo/factsheet.html
@@ -72,7 +72,7 @@
     </p>
     <p>
       <b>Official song:</b><br />Thomas Jefferson March (<a
-        style="color: rgb(0, 129, 250)"
+        style="color: rgb(0, 129, 250)" target="_blank"
         href="../../Audio/tjmarch.mp3"
         >Download 3.37MB</a
       >)
