--- a/Sub-pages/UniverseIndex/Uni87/uni87.html
+++ b/Sub-pages/UniverseIndex/Uni87/uni87.html
@@ -109,14 +109,23 @@
             <td><b>Documentation</b></td>
           </tr>
           <tr>
-            <td>UNI-87</td>
+            <td>HEZ-87</td>
             <td>
-              Establishment of complete connection to Universe 087.<br />Brief
-              overview of universal difference (TP: 1840-2040)
+              Establishment of complete connection to Universe 087
             </td>
             <td>02/01/78 - 05/23/78</td>
-            <td rowspan="3">4A</td>
-            <td rowspan="2">Indigo</td>
+            <td rowspan="4">4A</td>
+            <td rowspan="3">Indigo</td>
+            <td>
+              <a href="Documentation/errordoc.html">Link</a>
+            </td>
+          </tr>
+          <tr>
+            <td>UNI-87</td>
+            <td>
+              Universal difference research <i>(TP: 1840-2040)</i>
+            </td>
+            <td>06/12/78 - 08/20/78</td>
             <td>
               <a href="Documentation/errordoc.html">Link</a>
             </td>
@@ -127,7 +136,7 @@
               Collection of information on Universe 087's InterNet
               <i>(TP: 2040)</i>
             </td>
-            <td>06/01/78 - 11/17/78</td>
+            <td>09/01/78 - 11/17/78</td>
             <td>
               <a class="valid" href="Documentation/Net-87/net87doc.html">Link</a>
             </td>
