--- a/credits.html
+++ b/credits.html
@@ -113,6 +113,10 @@
           ></span
         >
       </p>
+      <hr width="20%" />
+      <p>Do you have brilliant ideas about what to add to Universe 87's archive or this website? Feel free to send me an email via
+        <a href="mailto:jlorgearchives@gmail.com">jlorgearchives@gmail.com</a>. Your ideas are appreciated!
+      </p>
       <hr />
     </center>
     <p><a href="index.html">Return to the Home Page</a></p>
