--- a/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
@@ -26,18 +26,18 @@
           href="https://www.youtube.com/watch?v=N_tNlu4_7RY"
           target="”_blank”"
           >High-definition version</a
-        >
-        (External - do not open without
-        <span
-          title="Hyperlink leads to future temporal period, without protocol, system will be overwhelmed"
-          >FDPA<sub>179</sub></span
-        >
-        protocol)
+        > (External)
       </p>
       <h3>Tape 2</h3>
       <p><i>Error: File not found!</i></p>
       <h3>Tape 3</h3>
       <p><i>Error: File not found!</i></p>
+      <br>
+      <hr width="25%" />
+      <p>External links must be open with <span
+          title="Hyperlink leads to future temporal period, without protocol, system will be overwhelmed"
+          >FDPA<sub>179</sub></span
+        > protocol.</p>
     </center>
     <a class="valid" href="../../uni87.html">Return to Universe Page</a>
     <span style="color: white">|</span>
