--- a/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
@@ -32,12 +32,11 @@
       <p><i>Error: File not found!</i></p>
       <h3>Tape 3</h3>
       <p><i>Error: File not found!</i></p>
-      <br>
-      <hr width="25%" />
-      <p>External links must be open with <span
+      <p><i>External links must be opened with <span
           title="Hyperlink leads to future temporal period, without protocol, system will be overwhelmed"
           >FDPA<sub>179</sub></span
-        > protocol.</p>
+        > protocol.</i></p>
+      <hr width="25%" />
     </center>
     <a class="valid" href="../../uni87.html">Return to Universe Page</a>
     <span style="color: white">|</span>
