--- a/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/Net-87/net87doc.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../87ICON.png" />
+    <link rel="icon" href="../../87ICON.png" />
     <title>Experiment NET-87</title>
     <link rel="stylesheet" href="../../uni87.css" />
   </head>
