--- a/Sub-pages/UniverseIndex/Uni87/uni87.html
+++ b/Sub-pages/UniverseIndex/Uni87/uni87.html
@@ -21,11 +21,11 @@
         <tbody>
           <tr>
             <td><a class="valid" href="#difference">Universal Difference</a></td>
-            <td><a class="valid" href="#summary">Universal Summary</a></td>
+            <td><a class="valid" href="#summary">Universe Summary</a></td>
             <td><a class="valid" href="#archive">Archive</a></td>
           </tr>
           <tr>
-            <td><a class="valid" href="#team">Maintainance Team</a></td>
+            <td><a class="valid" href="#team">Maintenance Team</a></td>
             <td><a class="valid" href="#history">History</a></td>
             <td></td>
           </tr>
