--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="icon.png" />
-    <title>Credits and about me</title>
+    <title>Credits</title>
     <style>
       p {
         font-size: 20px;
@@ -26,96 +26,269 @@
       a {
         color: rgb(0, 129, 250);
       }
+
+      td {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
     </style>
   </head>
   <body background="Images/iconslanted.png">
     <center>
-      <h1>Credits and about me</h1>
+      <h1>Credits</h1>
+      <table border="5">
+        <tbody style="text-align: center">
+          <tr>
+            <td><b>Credit</b></td>
+            <td><b>Orginal content</b></td>
+            <td><b>Usage</b></td>
+            <td><b>Link</b></td>
+          </tr>
+          <tr>
+            <td>Scott Cawthon</td>
+            <td>Five Nights at Freddy's<br />Icon</td>
+            <td>Entire website idea<br />MatPat's alternate video</td>
+            <td>
+              <a target="_blank" href="http://scottgames.com/"
+                >http://scottgames.com/</a
+              ><br /><a
+                target="_blank"
+                href="https://www.youtube.com/user/animdude"
+                >https://www.youtube.com/user/animdude</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Squimpus McGrimpus</td>
+            <td>William Afton picture</td>
+            <td>Original* William Afton picture</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A"
+                >https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>kaizerin</td>
+            <td>Freddy Fazbear's Pizza logo</td>
+            <td>Abandonned Freddy's picture</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/kaizerin"
+                >https://www.deviantart.com/kaizerin</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Markiplier</td>
+            <td>FNAF 1 Part 1 video</td>
+            <td>Alternate video</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://www.youtube.com/watch?v=iOztnsBPrAA"
+                >https://www.youtube.com/watch?v=iOztnsBPrAA</a
+              ><br /><a
+                target="_blank"
+                href="https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ"
+                >https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>MatPat</td>
+            <td>1st FNAF Theory video</td>
+            <td>Alternate video</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://www.youtube.com/watch?v=th_LYe97ZVc"
+                >https://www.youtube.com/watch?v=th_LYe97ZVc</a
+              ><br /><a
+                target="_blank"
+                href="https://www.youtube.com/c/GameTheorists"
+                >https://www.youtube.com/c/GameTheorists</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>U.S. Department of State</td>
+            <td>Department's seal</td>
+            <td>DTUTC's seal design</td>
+            <td>
+              <a target="_blank" href="https://www.state.gov/"
+                >https://www.state.gov/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Phil Wang</td>
+            <td>thispersondoesnotexist.com</td>
+            <td>Henry and William's picture</td>
+            <td>
+              <a target="_blank" href="https://thispersondoesnotexist.com"
+                >https://thispersondoesnotexist.com/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>uberduck.ai/Stuffinsight</td>
+            <td>Markiplier and MatPat's generated voice</td>
+            <td>The alternate videos</td>
+            <td>
+              <a target="_blank" href="https://uberduck.ai/"
+                >https://uberduck.ai/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Utah Division of<br />Archives and Records Service</td>
+            <td>Birth certificates</td>
+            <td>Henry and William's birth cert.</td>
+            <td>
+              <a target="_blank" href="https://archives.utah.gov/"
+                >https://archives.utah.gov/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Utah Division of<br />Motor Vehicles</td>
+            <td>Driver licenses</td>
+            <td>Henry and William's driver licenses</td>
+            <td>
+              <a target="_blank" href="https://dmv.utah.gov"
+                >https://dmv.utah.gov</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>United States<br />Patent Office</td>
+            <td>Patent #4,078,316; 4,107,948; 4,119,900</td>
+            <td>Fake patents for Henry and William</td>
+            <td>
+              <a target="_blank" href="https://www.uspto.gov/"
+                >https://www.uspto.gov/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>LawDepot.com</td>
+            <td>Legal document templates</td>
+            <td>
+              Commercial Lease Agreement<br />Purchase of Business Agreement<br />Contract
+              for Deed
+            </td>
+            <td>
+              <a target="_blank" href="https://www.lawdepot.com/"
+                >https://www.lawdepot.com/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Hurricane City</td>
+            <td>Business license application template<br />Logo</td>
+            <td>
+              FEI, AR's business license application<br />Missing person report
+            </td>
+            <td>
+              <a target="_blank" href="https://www.cityofhurricane.com/"
+                >https://www.cityofhurricane.com/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Hurricane City<br />Police Department</td>
+            <td>Logo</td>
+            <td>Missing person report</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/HurricaneCityUTPD/"
+                >https://www.facebook.com/HurricaneCityUTPD/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>DC Health<br />Division of Food</td>
+            <td>Original closure notice</td>
+            <td>FFP's closure notice</td>
+            <td>
+              <a target="_blank" href="https://dchealth.dc.gov"
+                >https://dchealth.dc.gov</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Southwest Utah<br />Public Health Department</td>
+            <td>Logo</td>
+            <td>FFP's closure notice</td>
+            <td>
+              <a target="_blank" href="https://swuhealth.org/"
+                >https://swuhealth.org/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Utah State<br />Tax Commission</td>
+            <td>Notice of Change, Logo</td>
+            <td>FFI, AR's Notice of Change</td>
+            <td>
+              <a target="_blank" href="https://tax.utah.gov"
+                >https://tax.utah.gov</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Salt Lake County<br />Health Department</td>
+            <td>Logo</td>
+            <td>Health problem report form</td>
+            <td>
+              <a target="_blank" href="https://slco.org/health/"
+                >https://slco.org/health/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>United States<br />Bankruptcy Court</td>
+            <td>Official Form 201</td>
+            <td>FEI's bankruptcy filing form</td>
+            <td>
+              <a target="_blank" href="https://www.uscourts.gov/"
+                >https://www.uscourts.gov/</a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p style="font-size: 15px">
+        *: I originally used Squimpus McGrimpus's William Afton photo as I found
+        it fitting. Now that I'm familar with editing, I've decided to create my
+        own William.
+      </p>
       <hr width="20%" />
-      <h2>Credits</h2>
-      <h3>Scott Cawthon</h3>
-      <p>
-        Five Nights at Freddy's, icon (from MatPat's alternate video)<br /><a
+      <h2>Who is Jamie Lorge?</h2>
+      <p style="width: 65%">
+        The website and
+        <a
           target="_blank"
-          href="http://scottgames.com/"
-          >http://scottgames.com/</a
-        ><br /><a target="_blank" href="https://www.youtube.com/user/animdude"
-          >https://www.youtube.com/user/animdude</a
+          href="https://www.youtube.com/channel/UCv00L7Bg5wLXpFmGqF0NRvg"
+          >the YouTube channel</a
         >
-      </p>
-      <br />
-      <h3>Squimpus McGrimpus</h3>
-      <p>
-        William Afton image<br /><a
-          target="_blank"
-          href="https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A"
-          >https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A</a
-        >
-      </p>
-      <br />
-      <h3>kaizerin</h3>
-      <p>
-        Freddy Fazbear's Pizza logo (from abandonned Freddy's pic)<br /><a
-          target="_blank"
-          href="https://www.deviantart.com/kaizerin"
-          >https://www.deviantart.com/kaizerin</a
-        >
-      </p>
-      <br />
-      <h3>Markiplier</h3>
-      <p>
-        Alternate FNaF 1 video<br /><a
-          target="_blank"
-          href="https://www.youtube.com/watch?v=iOztnsBPrAA"
-          >https://www.youtube.com/watch?v=iOztnsBPrAA</a
-        ><br /><a target="_blank" href="https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ"
-          >https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ</a
-        >
-      </p>
-      <br />
-      <h3>MatPat</h3>
-      <p>
-        Alternate theory video<br /><a
-          target="_blank"
-          href="https://www.youtube.com/watch?v=th_LYe97ZVc"
-          >https://www.youtube.com/watch?v=th_LYe97ZVc</a
-        ><br /><a target="_blank" href="https://www.youtube.com/c/GameTheorists"
-          >https://www.youtube.com/c/GameTheorists</a
-        >
-      </p>
-      <br />
-      <h3>United States Department of State</h3>
-      <p>DTUTC seal's design based on DOS's seal</p>
-      <br />
-      <h3>
-        <a target="_blank" href="https://thispersondoesnotexist.com"
-          >thispersondoesnotexist.com</a
-        >
-      </h3>
-      <p>Henry Emily picture</p>
-      <br />
-      <h3>
-        <a target="_blank" href="https://uberduck.ai/">uberduck.ai</a>
-      </h3>
-      <p>Generated voice for Markiplier and MatPat (model by Stuffinsight)</p>
-      <hr width="20%" />
-      <h2>About me</h2>
-      <p style="width: 75%">
-        The website and the YouTube channel is part of a series that dives into
-        the question: "What if Five Nights at Freddy's was real?". I've been a
-        fan since the release of the first game, and like some of the younger
-        fans at that point, I always wanted to believe that the place was
-        actually real. Welp, now that I'm more competent, why not make it real
-        myself? Jamie Lorge is not my real name.
-        <span style="font-size: 10px"
-          ><strike
-            >i literally learn html just to build this send help</strike
-          ></span
-        >
+        is part of a series that dives into the question: "What if Five Nights
+        at Freddy's was real?". I've been a fan since the release of the first
+        game, and like some of the younger fans at that point, I always wanted
+        to believe that the place was actually real. Welp, now that I'm more
+        competent, why not make it real myself?<br /><br />
       </p>
       <hr width="20%" />
-      <p>Do you have brilliant ideas about what to add to Universe 87's archive or this website? Feel free to send me an email via
-        <a href="mailto:jlorgearchives@gmail.com">jlorgearchives@gmail.com</a>. Your ideas are appreciated!
+      <p style="width: 65%">
+        I am not from the United States so the documents I produce is likely
+        inaccurate. If you've spotted any mistakes (lore-wise, document-wise),
+        or if you have brilliant ideas about what to add to Universe 87's
+        archive or this website, feel free to send me an email via
+        <a href="mailto:jlorgearchives@gmail.com">jlorgearchives@gmail.com</a>.
+        <span title="Thank you! (Vietnamese)">Cảm ơn bạn!</span>
       </p>
       <hr />
     </center>
