--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The official web-site of the Department of Trans-Universal and Temporal Communication"/>
-    <meta property="og:title" content="U.S. Department of Trans-Universal and Temporal Communication"/>
+    <meta
+      name="description"
+      content="The official web-site of the Department of Trans-Universal and Temporal Communication"
+    />
+    <meta
+      property="og:title"
+      content="U.S. Department of Trans-Universal and Temporal Communication"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image:secure_url" content="https://jlorgearchives.xyz/Images/preview.png" />
+    <meta
+      property="og:image:secure_url"
+      content="https://jlorgearchives.xyz/Images/preview.png"
+    />
     <meta property="og:url" content="https://www.jlorgearchives.xyz" />
-    <meta property="og:description" content="The official web-site of the Department of Trans-Universal and Temporal Communication" />
+    <meta
+      property="og:description"
+      content="The official web-site of the Department of Trans-Universal and Temporal Communication"
+    />
     <link rel="icon" href="icon.png" />
     <title>U.S. Department of Trans-Universal and Temporal Communiation</title>
     <link rel="stylesheet" href="style.css" />
@@ -63,15 +75,15 @@
     <ul>
       <li>
         <a href="Sub-pages/error.html">Project Amber</a> (1956-1959)
-        <b>[U]</b> - Sub-atomic interactions - Universe 001
+        <b>[U]</b> - Sub-atomic interactions
       </li>
       <li>
         <a href="Sub-pages/error.html">Project Citadel</a> (1959-1962)
-        <b>[U]</b> - Atomic interactions - Universe 001
+        <b>[U]</b> - Atomic interactions
       </li>
       <li>
         <a href="Sub-pages/error.html">Project Dust</a> (1963-1971)
-        <b>[U]</b> Macro interactions - Universe 001-009
+        <b>[U]</b> Macro interactions
       </li>
       <li>
         <a href="Sub-pages/error.html">Project Fracture</a> (1972-)
@@ -85,19 +97,19 @@
       </li>
       <li>
         <a href="Sub-pages/error.html">Project Neo</a> (1962-1971) <b>[T]</b> -
-        Sub-atomic, atomic and macro interactions - Universe 001
+        Sub-atomic, atomic and macro interactions
       </li>
       <li>
-        <a href="Sub-pages/error.html">Project Truth</a> (1980-) <b>[U]</b> -
+        <a href="Sub-pages/error.html">Project Truth</a> (1980-) <b>[U, T]</b> -
         Two-way communication on each Universe's InterNet message boards.
       </li>
       <li>
         <a href="Sub-pages/error.html">Project Undermine</a> (1984-)
-        <b>[U, T]</b> - Physical transportation. Planned - Universe 001
+        <b>[U, T]</b> - Physical transportation.
       </li>
       <li>
-        <a href="Sub-pages/error.html">Project Zero</a> (1954-1956)
-        <b>[U]</b> - Connection attempts
+        <a href="Sub-pages/error.html">Project Zero</a> (1954-1956) <b>[U]</b> -
+        Connection attempts
       </li>
     </ul>
     <p>
