--- a/Sub-pages/UniverseIndex/Uni87/uni87.html
+++ b/Sub-pages/UniverseIndex/Uni87/uni87.html
@@ -35,18 +35,18 @@
     </center>
     <hr id="difference" />
     <h2 >Universal Difference</h2>
-    <p>Events from the 2014 video game called <i>Five Nights at Freddy's</i> by Scott B. Cawthon happened in the United States.</p>
+    <p>Events from the 2014 video game called <i>Five Nights at Freddy's</i> by Scott Braden Cawthon happened in the United States.</p>
     <h2 id="summary">Universe Summary (1954-2040)</h2>
     <h3>Timeline Divergence</h2>
-      <p><B>Universe 087</B> is a universe that is largely similar to our Universe for most of its history. The first major divergent of the historical timeline occurs when <B>Henry Johnson Emily</B> (04/04/1954) and <b>William Edwards Afton</b> (09/13/1957) were born in the Utahn city of Hurricane. History remains mostly the same for two decades until Emily and Afton  started their own chain of animatronic pizza restaurants called: <i>Fredbear's Family Diner</i> together in their birthplace in 1978. In 1982, an incident occured where the 3-year-old daughter of Emily went missing and was persumed dead. Emily also went missing a year later, leaving Afton solely in charge of the company. Afton promptly sold the company to state entrepreneurs, who renamed the company to <i>Fazbear Entertainment Inc.</i>. The restaurant was also renamed to <i>Freddy Fazbear's Pizza</i>. The chain achieved national success with more than 104 locations opened in 42 U.S. states in 1985. However, a series of incidents with loss of life occured throughout the late 1980s led to numerous boycotts. The company filed for bankruptcy in 1992, with its final location closing in December of the same year. Information about William Afton could not be found after 1992.</p>
+      <p><B>Universe 087</B> is a universe that is largely similar to our Universe for most of its history. The first major divergent of the historical timeline occurs when <B>Henry Johnson Emily</B> (04/04/1954) and <b>William Edwards Afton</b> (09/13/1957) were born, respectively, in the Utahn city of Hurricane and St. George. History remains mostly the same for two decades until Emily and Afton  started their own animatronic pizza restaurant company called <i>Fazbear Entertainment Inc.</i> together in Hurricane City in 1978. The same year, they opened their first restaurant called <i>Fredbear's Family Diner</i>. In 1982, an incident occured where the 3-year-old daughter of Emily went missing and was persumed dead. Emily also went missing two months later, leaving Afton solely in charge of the company. Afton promptly sold the company to state entrepreneurs and the restaurant was renamed to <i>Freddy Fazbear's Pizza</i>. The chain achieved relative success with 4 locations operating in the state of Utah in 1985. However, a series of incidents with loss of life occurred throughout the late 1980s led to numerous boycotts. The company filed for bankruptcy in 1992, with its final location closing in December of the same year. After selling the business, Afton created a new company called <i>Afton Robotics, LLC.</i> and opened another pizza restaurant called <i>Circus Baby's Pizza World</i> in 1984 but quickly closed two months later. In 1986, Afton opened <i>Circus Baby's Entertainment and Rental</i>. From 1992, no information regarding Afton was found.</p>
     <h3>Resurgence of Interests</h2>
-      <p>In 2014, Texas resident <b>Scott Brandon Cawthon</b> released a video game about the company's past incidents. The video game titled <i>Five Nights at Freddy's</i>, in the genre of "horror point-and-click", became popular after various "Let's Player" recorded video tapes of themselves reacting to the game and posting it to a video hosting web-site called <i>YouTube</i>. Cawthon continued developing more titles for the series throughout the 2010s. As part of <i>The Fazbear Restoration Project</i>, a horror attraction using the company's old assets called <i>Fazbear's Fright</i> was opened in March 2023. However, after just a week, it was the subject of a large building fire that destroyed most of its content. Official report blamed "faulty wiring".</p>
+      <p>In 2014, Texas resident <b>Scott Bradon Cawthon</b> released a video game about the company's past incidents. The video game titled <i>Five Nights at Freddy's</i>, in the genre of "horror point-and-click", became popular after various "Let's Player" recorded video tapes of themselves reacting to the game and posting it to a video hosting web-site called <i>YouTube</i>. Cawthon continued developing more titles for the series throughout the 2010s. As part of <i>The Fazbear Restoration Project</i>, a horror attraction using the company's old assets called <i>Fazbear's Fright</i> planned to open in March 2023. However, just a week before the opening day, it was the subject of a large building fire that destroyed most of its content.</p>
     <h3>A New Success</h2>
-      <p>The unexpected increase of interests in the chain led to an official restart of <i>Fazbear Entertainment Inc.</i>, starting with the release of a virtual reality video game called <i>Five Nights at Freddy's: Help Wanted</i> in July 2024. In December 2026, the company announced reopening plans of the closed restaurants. The restaurants achieved international success with locations opening in more than 50 countries, surpassing <i>McDonald's Corporation</i>. In 2029, Fazbear Entertainment Inc. opened its first Freddy Fazbear's Mega Pizzaplex, a 1980s-themed entertainment complex. The company continued to experience huge growth in profit, with its 2040 earning report reporting more than $130 billion in revenue.</p>
+      <p>The unexpected increase of interests in the chain led to an official restart of <i>Fazbear Entertainment Inc.</i>, starting with the release of a virtual reality video game called <i>Five Nights at Freddy's: Help Wanted</i> in July 2024. In December 2026, the company announced reopening plans of the closed restaurants. The restaurants achieved national success with locations opening in more than 40 states. In 2029, <i>Fazbear Entertainment Inc.</i> opened the first <i>Freddy Fazbear's Mega Pizzaplex</i>, a 1980s-themed entertainment complex. The company continued to experience huge growth in profit, with its 2040 earning report reporting more than $20 billion in revenue.</p>
     <hr id="archive"/>
     <h2 style="line-height:50%">Archive</h2>
     <ul style="color: white">
-      <li><a href="Archive/errorarchive.html">Documents</a> - Documents downloaded digitally from federal, state web-sites</li>
+      <li><a class="valid" href="Archive/Documents/documents.html">Documents</a> - Documents downloaded digitally from federal, state web-sites</li>
       <li><a class="valid" href="Archive/Newspapers/newspapers.html">Newspapers</a> - Newspapers clippings downloaded digitally from various web-sites</li>
       <li><a class="valid" href="Archive/Photos/photos.html">Photographs</a> - Photographs downloaded digitally</li>
       <li><a href="Archive/errorarchive.html">Radios</a> - Radio recordings downloaded digitally</li>
@@ -127,7 +127,7 @@
             </td>
             <td>06/12/78 - 08/20/78</td>
             <td>
-              <a href="Documentation/errordoc.html">Link</a>
+              <a class="valid" href="Documentation/UNI-87/uni87doc.html">Link</a>
             </td>
           </tr>
           <tr>
@@ -138,7 +138,7 @@
             </td>
             <td>09/01/78 - 11/17/78</td>
             <td>
-              <a class="valid" href="Documentation/Net-87/net87doc.html">Link</a>
+              <a class="valid" href="Documentation/NET-87/net87doc.html">Link</a>
             </td>
           </tr>
           <tr>
