--- a/Sub-pages/UniverseIndex/Uni87/Documentation/UNI-87/uni87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/UNI-87/uni87doc.html
@@ -20,13 +20,26 @@
       /></a>
       <hr width="25%" />
       <h2>Documentation Video Tapes</h2>
-      <h3>Tape 1</h3>
-      <p><i>Error: File not found!</i></p>
-      <h3>Tape 2</h3>
-      <p><i>Error: File not found!</i></p>
-      <h3>Tape 3</h3>
-      <p><i>Error: File not found!</i></p>
+      <h3>Tape 1: "Experiment Briefing"</h3>
+      <video controls src="Tapes/uni87tape1.mp4"></video>
       <p>
+        <a
+          class="valid"
+          href="https://www.youtube.com/watch?v=akaCG4L-YmM"
+          target="”_blank”"
+          >High-definition version</a
+        > (External)
+      </p>
+      <h3>Tape 2: "Exhbit Showcase"</h3>
+      <video controls src="Tapes/uni87tape2.mp4"></video>
+      <p>
+        <a
+          class="valid"
+          href="https://www.youtube.com/watch?v=akaCG4L-YmM"
+          target="”_blank”"
+          >High-definition version</a
+        > (External)
+      </p>
         <i
           >External links must be opened with
           <span
