--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       property="og:description"
       content="The official web-site of the Department of Trans-Universal and Temporal Communication"
     />
-    <link rel="icon" href="icon.png" />
-    <title>U.S. Department of Trans-Universal and Temporal Communiation</title>
+    <link rel="icon" href="Images/icon.png" />
+    <title>U.S. Department of Trans-Universal and Temporal Communication</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body background="Images/iconslanted.png">
     <center>
-      <img class="logo" src="icon.png" alt="U.S. DTUTC Logo" />
+      <img class="logo" src="Images/icon.png" alt="U.S. DTUTC Logo" />
       <p class="boldxlarge">Welcome to the official web-site of</p>
       <h1>The Department of Trans-Universal and Temporal Communication</h1>
       <hr />
